manifests/deployment.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - hosts:
        - devops-platform.xiaomo.io
      secretName: xiaomo-io-tls
  rules:
    - host: devops-platform.xiaomo.io
      http:
        paths:
          - path: /
            backend:
              serviceName: APPLICATION_NAME
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: APPLICATION_NAME
spec:
  selector:
    app: APPLICATION_NAME
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APPLICATION_NAME
  labels:
    app: APPLICATION_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APPLICATION_NAME
  template:
    metadata:
      labels:
        app: APPLICATION_NAME
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: APPLICATION_NAME
          image: REGISTRY_URL/PROJECT_NAME/APPLICATION_NAME:IMAGE_TAG
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
